--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,22 +1,13 @@
-<ion-view class="login-view" hide-nav-bar="true">
-  <ion-content class="padding">
-  <div class=" logo text-center">
-    sdsfds
-    <img src="http://placehold.it/100x100" alt="">
-  </div>
-  <div class="list list-inset login-view">
-    <h2 class="text-center login-title">INICIAR SESION</h2>
-    <div class="login-inputs">
-      <label class="item item-input login-input  ">
- <!--        <input type="text" autocapitalize="off" placeholder="Nombre de Usuario" ng-model="data.username">
-      </label>
-      <label class="item item-input login-input">
-        <input type="password" autocapitalize="off" placeholder="Contrasena" ng-model="data.password">
-      </label> -->
+<ion-view class="login-view"  hide-nav-bar="true">
+     <ion-content class="padding">
+     <div class="logo text-center">
+      <img src="http://placehold.it/100x100" alt="">
     </div>
+    <div class="list list-inset login-view">
+      <h2 class="text-center login-title">INICIAR SESION</h2>
+    </div>
+     <div class="footer login-view login-footer">
+    <button ng-disabled="btnDisabled" class="button button-block button-positive login-button" ng-click="login(data)"><strong>Ingresar</strong></button>  
   </div>
-  <div class="footer login-view login-footer">
-    <button ng-disabled="btnDisabled" class="button button-block button-positive login-button" ng-click="#"><strong>Ingresar</strong></button>  
-  </div>
-</ion-content>
+  </ion-content>
 </ion-view>
