add cv, profile, menu and login html files

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,13 +1,11 @@
 <ion-view class="login-view"  hide-nav-bar="true">
-     <ion-content class="padding">
-     <div class="logo text-center">
-      <img src="http://placehold.it/100x100" alt="">
+  <ion-content class="padding">
+    <div class="logo text-center">
+      <img src="img/the-job.png" alt="">
     </div>
-    <div class="list list-inset login-view">
-      <h2 class="text-center login-title">INICIAR SESION</h2>
+    <div class="footer login-view login-footer text-center">
+      <a ui-sref="app.cv" class="button button-block button-positive login-button">
+      <strong>Iniciar sesion con facebook</strong></a>
     </div>
-     <div class="footer login-view login-footer">
-    <button ng-disabled="btnDisabled" class="button button-block button-positive login-button" ng-click="login(data)"><strong>Ingresar</strong></button>  
-  </div>
   </ion-content>
 </ion-view>
