--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,8 @@
 /* Empty. Add your own CSS if you like */
+/*Styles for login view*/
+.logo{
+  margin-top: 80px;
+}
+.login-button{
+  font-size: 20px;
+}
