--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,3 +6,10 @@
 .login-button{
   font-size: 20px;
 }
+.profile-image{
+  margin-top: 25px;
+}
+.delete-account{
+  margin-top: -10px;
+  margin-left: 102px;
+}
