--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -4,7 +4,7 @@
       <img src="img/the-job.png" alt="">
     </div>
     <div class="footer login-view login-footer text-center">
-      <a ui-sref="app.cv" class="button button-block button-positive login-button">
+      <a ng-click="login()" class="button button-block button-positive login-button">
       <strong>Iniciar sesion con facebook</strong></a>
     </div>
   </ion-content>
