--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -4,7 +4,7 @@
   </ion-nav-buttons>
   <ion-content class="padding">
     <div class="profile-image text-center">
-      <img src="http://placehold.it/300x200">
+      <img src="img/user-placeholder.png">
     </div>
     <div class="list list-inset profile-info text-center">
       <div class="item">
