add more changes of second delivery

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,4 +1,4 @@
-<ion-view title="Mi Perfil">
+<ion-view title="Mi Perfil" cache-view="false">
   <ion-nav-buttons side="right">
     <a class="button button-light edit-profile" ui-sref="app.editProfile">Editar</a>
 
