--- a/www/templates/change-template.html
+++ b/www/templates/change-template.html
@@ -1,5 +1,14 @@
 <ion-view title="Cambiar tema">
   <ion-content>
-    Test
+    <div class="templates-container">
+      <a href="#" ng-repeat="template in templates">
+        <img src="http://placehold.it/200" alt="">
+        <button class="apply-template button button-balanced" 
+          ng-click="selectTemplate(template.id)" 
+          ng-class="{'button-outline': defaultTemplateId!=template.id }">
+          <i class="icon ion-checkmark-circled"></i>
+        </button>
+      </a>
+    </div>
   </ion-content>
 </ion-view>
