--- a/www/templates/cv.html
+++ b/www/templates/cv.html
@@ -1,5 +1,5 @@
 <ion-view title="Curriculum Vitae">
-  <ion-nav-buttons side="right">
+  <ion-nav-buttons side="right" cache="false">
     <a ng-show="!hasCv()" ui-sref="app.createCv" class="button button-light no-animation">
       Create
     </a>
