--- a/www/css/style.css
+++ b/www/css/style.css
@@ -44,22 +44,43 @@
 .cv-iframe-content > .scroll {
   height: 100%;
 }
+.without-cv{
+  padding: 30px;
+}
+.without-cv img {
+  width: 100%;
+}
+.loading {
+  text-align: center;
+  margin-top: 100px;
+}
 
 /**
  * Change template
  */
-.templates-container > a {
+.templates-container > .template {
   height: 200px;
   display: block;
   margin: 10px;
   overflow: hidden;
   position: relative;
 }
-.templates-container > a .apply-template {
+.templates-container > .template .apply-template {
   position: absolute;
   top: 10px;
   right: 10px;
 }
-.templates-container > a > img {
+.templates-container > .template > img {
   width: 100%;
+}
+.templates-container .template-name {
+  position: absolute;
+  bottom: 0;
+  display: block;
+  left:0;
+  width: 100%;
+  background-color: #fff;
+  padding: 10px 0;
+  text-align: center;
+  border-top: 1px solid #eee;
 }
