--- a/www/templates/cv-edit.html
+++ b/www/templates/cv-edit.html
@@ -9,7 +9,7 @@
           Next
       </button>
       <button class="button button-light no-animation" ion-wizard-start="save()">
-          Create
+          Editar
       </button>
   </ion-nav-buttons>   
   <ion-slide-box ion-wizard>
@@ -57,7 +57,7 @@
                 </label>
                 <label class="item item-input item-stacked-label">
                   <span class="input-label">Otra información</span>
-                  <textarea required ng-model="experience.bullet_points.text"></textarea>
+                  <textarea ng-model="experience.bullet_points.text"></textarea>
                 </label>
               </div>
             </div>
