--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -19,7 +19,7 @@
         <strong>Telefono: </strong> {{profile.telephone}}
       </div>
       <div class="item">
-        <strong>Website:</strong> {{profile.website}}
+        <strong>Website:</strong> {{profile.webpage}}
       </div>
     </div>
     <div class="bottom-profile-buttons text-center">
